--- a/NewEra Cash & Carry/appsettings.json
+++ b/NewEra Cash & Carry/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=NewEraCashCarry;User Id=sa;Password=Str0ngP@ssw0rd!;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
