Update .gitignore, add PaymentSettings class, remove config
Updated .gitignore to include project and solution files, and appsettings.json for "NewEra Cash & Carry" project. Added a new namespace `NewEra_Cash___Carry.Helpers` and an empty `PaymentSettings` class in `PaymentSettings.cs`. Removed `appsettings.json` which contained authentication, connection strings, logging, and allowed hosts settings.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/NewEra Cash & Carry/NewEra Cash & Carry.csproj
+/NewEra Cash & Carry/NewEra Cash & Carry.csproj
+/NewEra Cash & Carry.sln
+/NewEra Cash & Carry/appsettings.json
+/NewEra Cash & Carry/appsettings.json
