Refactor AuthController and add service-based architecture
Refactored AuthController to use IUserService for better modularity.
Updated solution file to reflect Visual Studio version.
Moved UserDto class inside a namespace.
Configured JWT authentication and registered services in Program.cs.
Added AutoMapper and its configuration.
Updated .editorconfig to suppress CS8603 warnings.
Introduced repository and service interfaces and implementations.
Added new image file with binary data changes.

--- a/NewEra Cash & Carry/NewEra Cash & Carry.csproj
+++ b/NewEra Cash & Carry/NewEra Cash & Carry.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
@@ -31,12 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Interfaces\" />
-    <Folder Include="Application\Profiles\" />
-    <Folder Include="Application\Services\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Infrastructure\Migrations\" />
-    <Folder Include="Infrastructure\Repositories\" />
   </ItemGroup>
 
 </Project>
