Refactor ProductController to use service layer
- Refactored `ProductController` to use `IProductService` for database operations, promoting separation of concerns.
- Updated `IProductService` to include `UploadImagesAsync` method.
- Implemented `IProductService` methods in `ProductService`, including image upload logic.
- Removed `Microsoft.EntityFrameworkCore` dependency from `OrderService`.
- Updated `ProductRepository` to include product images in queries.
- Added `AddBlacklistedTokenAsync` method to `IUserRepository`.
- Organized project structure by adding new folders for interfaces.
- Enhanced `ProductController` to handle exceptions more specifically and return `ProductDto` for better abstraction.
- Centralized input validation in the service layer for product creation and updates.

--- a/NewEra Cash & Carry/NewEra Cash & Carry.csproj
+++ b/NewEra Cash & Carry/NewEra Cash & Carry.csproj
@@ -32,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Interfaces\Category\" />
+    <Folder Include="Application\Interfaces\Order\" />
+    <Folder Include="Application\Interfaces\Product\" />
+    <Folder Include="Application\Interfaces\UserInterfaces\" />
     <Folder Include="Infrastructure\Migrations\" />
   </ItemGroup>
 
